# serial_router

./: .gitignore  CMakeLists.txt  LICENSE  README.md  address_resolver.cpp  pio_rx.pio  pio_tx.pio  readme2.md
nvs_lib/: CMakeLists.txt  LICENSE
releases/: README.md  v1.1.uf2
settings/: Settings.cpp  Settings.h  Settings_keys.h
